--- a/templates/bookList.html
+++ b/templates/bookList.html
@@ -1,13 +1,15 @@
 {%extends 'base.html'%}{%block title%}Bookstore!{%endblock%} {%block content%}
 
 <h1>WELCOME TO THE BOOKSTORE!</h1>
-<p><a href="/add">Add a Book Here</a></p>
-<ul>
-  {%for book in books%}
-  <li>
-    <a href="/{{book.isbn}}">{{book.title}}</a>
-  </li>
-  {%endfor%}
-</ul>
+<a class="btn btn-success" href="/add">Add a Book Here</a>
+<div id="bookDiv">
+  <ul id="bookList">
+    {%for book in books%}
+    <li>
+      <a href="/{{book.isbn}}">{{book.title}}</a>
+    </li>
+    {%endfor%}
+  </ul>
+</div>
 
 {%endblock%}
