--- a/templates/updateBookForm.html
+++ b/templates/updateBookForm.html
@@ -1,11 +1,19 @@
-{%extends 'base.html'%}{%block title%}Add Book{%endblock%} {%block content%}
+{%extends 'base.html'%}{%block title%}Update {{book.isbn}}{%endblock%} {%block
+content%}
 
-<h1>ADD a BOOK HERE</h1>
+<h1>UPDATE {{book.isbn}}</h1>
 <div id="bookForm">
-  <form action="/add" method="POST">
+  <form action="/update/{{book.isbn}}" method="POST">
     <div class="form-group">
       <label for="isbn">ISBN Number:</label>
-      <input type="text" class="form-control" id="isbn" name="isbn" required />
+      <input
+        type="text"
+        class="form-control"
+        id="isbn"
+        name="isbn"
+        value="{{book.isbn}}"
+        required
+      />
     </div>
     <div class="form-group">
       <label for="title">Title:</label>
@@ -14,6 +22,7 @@
         class="form-control"
         id="title"
         name="title"
+        value="{{book.title}}"
         required
       />
     </div>
@@ -24,6 +33,7 @@
         class="form-control"
         id="author"
         name="author"
+        value="{{book.author}}"
         required
       />
     </div>
@@ -34,6 +44,7 @@
         class="form-control"
         id="pages"
         name="pages"
+        value="{{book.pages}}"
         required
       />
     </div>
@@ -44,6 +55,7 @@
         class="form-control"
         id="publsiher"
         name="publisher"
+        value="{{book.publisher}}"
         required
       />
     </div>
@@ -54,6 +66,7 @@
         class="form-control"
         id="year"
         name="year"
+        value="{{book.year}}"
         required
       />
     </div>
@@ -64,6 +77,7 @@
         class="form-control"
         id="language"
         name="language"
+        value="{{book.language}}"
         required
       />
     </div>
@@ -74,11 +88,12 @@
         class="form-control"
         id="amazon_url"
         name="amazon_url"
+        value="{{book.amazon_url}}"
         required
       />
     </div>
-    <button class="btn btn-primary">Add</button>
-    <a href="/" class="btn btn-danger">Cancel</a>
+    <button class="btn btn-primary">Update</button>
+    <a href="/{{book.isbn}}" class="btn btn-danger">Cancel</a>
   </form>
 </div>
 
